# open_telco

./: .gitignore  README.md  extract_telelogs.py  pyproject.toml  transform_manual_dataset.py  upload_telelogs.py
logs/: 2025-11-01T04-27-41+07-00_telecom-bench_MXPhXrusVdC2DqXGryoKvt.json
src/logs/: 2025-11-01T07-26-05+07-00_teleqna-bench_WAkcGtosYBMm9Uzd9EeFga.json  2025-11-01T07-35-24+07-00_teleqna-bench_cA4EgFaAnRgZF227LHuaK6.json  2025-11-01T20-44-27+07-00_teleqna-bench_4o5LMNhCfeUzZfzxKchacb.json  2025-11-02T03-06-33+07-00_teleqna_5dpxtf8FUWCeo23Zj32o2Y.json  2025-11-02T03-06-54+07-00_telelogs_aWytMaihMw27hMZimseViq.json
src/open_telco/: __init__.py  run_evals.py
src/open_telco/logs/: .eval-set-id  eval-set.json
src/open_telco/scripts/: __init__.py  utils.py
src/open_telco/telelogs/: telelogs.py  utils.py
src/open_telco/telemath/: telemath.py
src/open_telco/teleqna/: teleqna.py
src/open_telco/teleyaml/: teleyaml.py
src/open_telco/three_gpp/: three_gpp.py
src/telecom_bench/: __init__.py  prompt_transformer.py
src/telecom_bench/benchmarks/: __init__.py
src/telecom_bench/benchmarks/telelogs/: __init__.py  telelogs.py  telelogsmcq.py  utils.py
src/telecom_bench/benchmarks/telemath/: __init__.py  telemath.py
src/telecom_bench/benchmarks/teleqna/: __init__.py  teleqna.py
src/telecom_bench/scripts/: utils.py
telelogs/: INSTRUCTIONS.md  README.md
ui/: README.md  app.py  requirements.txt
ui/templates/: index.html
